# API_DIO

./: README.md  alembic.ini  pyproject.toml
API/: __init__.py  main.py  routers.py
API/atleta/: controller.py  models.py  schemas.py
API/categoria/: controller.py  models.py  schemas.py
API/centro_treinamento/: controller.py  models.py  schemas.py
API/configs/: database.py  settings.py
API/contrib/: dependencies.py  models_base.py  schema_base.py
API/contrib/repository/: models_all.py
alembic/: env.py
alembic/versions/: 9de6991ba040_init_db.py
