[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
taskipy = "^1.12.2"
docker = "^7.0.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
uvicorn API.main:app --reload
"""
create-migretion = "alembic revision --autogenerate"
run-db = "alembic upgrade head"
doc = "mkdocs serve"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
